--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="ifRoom"
+        android:showAsAction="collapseActionView"
         android:title="@string/action_savepoint"/>
 
 </menu>
